--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@
           creds: ${{ secrets.AZURE_CREDENTIALS }}
       - uses: Azure/get-keyvault-secrets@v1
         with: 
-          keyvault: "containervault-webapp"
+          keyvault: "kv-sndls"
           secrets: 'containerPassword, containerUsername'
         id: myGetSecretAction
       - uses: azure/docker-login@v1
